@@ -1,7 +1,6 @@
 using System;
 using System.Data.SqlClient;
 using NHibernate.Exceptions;
-using NHibernate.SqlCommand;
 
 namespace NHibernate.Test.ExceptionsTest
 {
@@ -11,17 +10,17 @@ namespace NHibernate.Test.ExceptionsTest
 	{
 		#region ISQLExceptionConverter Members
 
-		public ADOException Convert(Exception sqlException, string message, SqlString sql)
+		public Exception Convert(AdoExceptionContextInfo exInfo)
 		{
-			SqlException sqle = ADOExceptionHelper.ExtractDbException(sqlException) as SqlException;
+			SqlException sqle = ADOExceptionHelper.ExtractDbException(exInfo.SqlException) as SqlException;
 			if(sqle != null)
 			{
 				if (sqle.Number == 547)
-					return new ConstraintViolationException(message, sqle.InnerException, sql, null);
+					return new ConstraintViolationException(exInfo.Message, sqle.InnerException, exInfo.Sql, null);
 				if (sqle.Number == 208)
-					return new SQLGrammarException(message, sqle.InnerException, sql);
+					return new SQLGrammarException(exInfo.Message, sqle.InnerException, exInfo.Sql);
 			}
-			return SQLStateConverter.HandledNonSpecificException(sqlException, message, sql);
+			return SQLStateConverter.HandledNonSpecificException(exInfo.SqlException, exInfo.Message, exInfo.Sql);
 		}
 
 		#endregion
