@@ -1,7 +1,6 @@
 using System;
 using System.Data.OracleClient;
 using NHibernate.Exceptions;
-using NHibernate.SqlCommand;
 
 namespace NHibernate.Test.ExceptionsTest
 {
@@ -9,21 +8,21 @@ namespace NHibernate.Test.ExceptionsTest
 	{
 		#region ISQLExceptionConverter Members
 
-		public ADOException Convert(Exception sqlException, string message, SqlString sql)
+		public Exception Convert(AdoExceptionContextInfo exInfo)
 		{
-			var sqle = ADOExceptionHelper.ExtractDbException(sqlException) as OracleException;
+			var sqle = ADOExceptionHelper.ExtractDbException(exInfo.SqlException) as OracleException;
 			if (sqle != null)
 			{
 				if (sqle.Code == 1036)
 				{
-					return new ConstraintViolationException(message, sqle.InnerException, sql, null);
+					return new ConstraintViolationException(exInfo.Message, sqle.InnerException, exInfo.Sql, null);
 				}
 				if (sqle.Code == 942)
 				{
-					return new SQLGrammarException(message, sqle.InnerException, sql);
+					return new SQLGrammarException(exInfo.Message, sqle.InnerException, exInfo.Sql);
 				}
 			}
-			return SQLStateConverter.HandledNonSpecificException(sqlException, message, sql);
+			return SQLStateConverter.HandledNonSpecificException(exInfo.SqlException, exInfo.Message, exInfo.Sql);
 		}
 
 		#endregion
