@@ -1,6 +1,5 @@
 using System;
 using System.Runtime.Serialization;
-using NHibernate.SqlCommand;
 
 namespace NHibernate.Exceptions
 {
@@ -12,7 +11,7 @@ namespace NHibernate.Exceptions
 	public class LockAcquisitionException : ADOException
 	{
 		public LockAcquisitionException(SerializationInfo info, StreamingContext context) : base(info, context) {}
-		public LockAcquisitionException(string message, Exception innerException, SqlString sql) : base(message, innerException, sql) {}
+		public LockAcquisitionException(string message, Exception innerException, string sql) : base(message, innerException, sql) {}
 		public LockAcquisitionException(string message, Exception innerException) : base(message, innerException) {}
 	}
 }
